@@ -1,9 +1,0 @@
-#ifndef __DEFINES_FX
-#define __DEFINES_FX
-
-
-#define ENABLE_PS20_PATH
-#define ENABLE_PS11_PATH
-
-
-#endif
