@@ -71,7 +71,6 @@ IDR_MAIN_ACCEL ACCELERATORS DISCARDABLE
 BEGIN
     VK_ESCAPE,      IDM_EXIT,               VIRTKEY, NOINVERT
     VK_F2,          IDM_CHANGEDEVICE,       VIRTKEY, NOINVERT
-    VK_RETURN,      IDM_TOGGLEFULLSCREEN,   VIRTKEY, ALT, NOINVERT
     "X",            IDM_EXIT,               VIRTKEY, ALT, NOINVERT
 END
 
