@@ -1,5 +1,8 @@
 MeshTexer changelog
 
+050629: Removed gloss generation. Preview light now is in view space
+		(i.e. attached to camera).
+
 050604: MeshTexer added to repository. This tool was used for in.out.side
 		demo to generate textures on arbitrary models from tileable textures
 		by projecting them. The initial release could generate diffuse and
